--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.2.4",
     "astro": "^2.4.3",
     "astro-icon": "^0.8.0",
+    "framer-motion": "^10.12.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.2"
