--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@fontsource/outfit": "^4.5.11",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@types/three": "^0.152.0",
     "astro": "^2.4.3",
     "astro-icon": "^0.8.0",
     "framer-motion": "^10.12.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "three": "^0.152.2"
   }
 }
