--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/react": "^2.1.3",
     "@astrojs/tailwind": "^3.1.2",
+    "@emailjs/browser": "^3.11.0",
     "@fontsource/bitter": "^4.5.11",
     "@fontsource/outfit": "^4.5.11",
     "@types/react": "^18.2.6",
@@ -22,6 +23,7 @@
     "framer-motion": "^10.12.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "tailwindcss": "^3.3.2",
     "three": "^0.152.2"
   }
