--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@astrojs/tailwind": "^3.1.2",
     "@emailjs/browser": "^3.11.0",
     "@fontsource/bitter": "^4.5.11",
-    "@fontsource/outfit": "^4.5.11",
+    "@fontsource/lato": "^5.0.1",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "@types/three": "^0.152.0",
